tests/compile_errors/duplicated-namespace.buzz
// The namespace `duplicated\` is already exposed by another script
import "../utils/duplicate-namespace-1";
import "../utils/duplicate-namespace-2";

test  "Should not be able to import two scripts with the same neamespace" {
}
